--- a/app/src/main/res/layout/activity_button_mash.xml
+++ b/app/src/main/res/layout/activity_button_mash.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_button_mash"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,17 +9,44 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.txstate.gameapp.ButtonMashActivity">
+    tools:context="com.txstate.gameapp.ButtonMashActivity"
+    android:background="@drawable/background">
 
     <TextView
-        android:text="ButtonMash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="98dp"
-        android:layout_marginStart="98dp"
-        android:layout_marginTop="98dp"
-        android:id="@+id/textView2" />
+        android:text="@string/Welcome"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+
+    />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="175dp"
+        android:layout_height="88dp"
+        android:onClick="onePlayer"
+        android:text="@string/One_Player"
+        android:visibility="visible"
+        android:textColor="#FFFF"
+        android:backgroundTint="#378A88"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="200dp"
+        android:layout_centerHorizontal="true"
+
+ />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="175dp"
+        android:layout_height="88dp"
+        android:onClick="twoPlayer"
+        android:text="@string/Two_player"
+        android:backgroundTint="#378A88"
+        android:textColor="#FFFF"
+        android:visibility="visible"
+        tools:ignore="MissingConstraints"
+        android:layout_marginTop="300dp"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
