--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.txstate.gameapp.MainActivity"
+    tools:context="com.txstate.gameapp.MenuActivity"
     android:background="@drawable/background">
 
     <Button
@@ -50,11 +50,11 @@
         android:onClick="openButtonMash"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
         style="@android:style/Widget.Holo.Button.Small"
-        android:layout_below="@+id/imageView"
+        android:layout_alignBottom="@+id/RPS_Button"
         android:layout_alignLeft="@+id/RPS_Button"
-        android:layout_alignStart="@+id/RPS_Button" />
+        android:layout_alignStart="@+id/RPS_Button"
+        android:layout_marginBottom="49dp" />
 
 
 </RelativeLayout>
