--- a/app/src/main/res/layout/activity_pong.xml
+++ b/app/src/main/res/layout/activity_pong.xml
@@ -11,17 +11,15 @@
     tools:context="com.txstate.gameapp.PongActivity">
 
     <TextView
-        android:text="I DO NOTHING!!!"
-        android:textSize="60dp"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="54dp"
-        android:layout_marginStart="54dp"
-        android:layout_marginTop="68dp"
-        android:id="@+id/textView3" />
+        android:layout_centerVertical="true"
+        android:text="I DO NOTHING!!
+        -.-'"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:textSize="60dp" />
 </RelativeLayout>
 
 
