--- a/app/src/main/res/layout/testlayout.xml
+++ b/app/src/main/res/layout/testlayout.xml
@@ -3,4 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="IM HERE"/>
+
 </LinearLayout>
