--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -100,5 +100,14 @@
         android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="1.0" />
 
+    <Button
+        android:id="@+id/bChallengeRPS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New challenger! Accept?"
+        android:visibility="invisible"
+        tools:layout_editor_absoluteX="80dp"
+        tools:layout_editor_absoluteY="414dp" />
+
 
 </android.support.constraint.ConstraintLayout>
