--- a/app/src/main/res/layout/activity_rps_highscores.xml
+++ b/app/src/main/res/layout/activity_rps_highscores.xml
@@ -11,7 +11,7 @@
 
 
     <TextView
-        android:text="RPS Highscore"
+        android:text="RPS Highscores"
         android:layout_centerHorizontal="true"
         android:textAlignment="center"
         android:textSize="35sp"
