--- a/app/src/main/res/layout/activity_rps_score.xml
+++ b/app/src/main/res/layout/activity_rps_score.xml
@@ -24,22 +24,33 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent" />
-
+    <Button
+        android:id="@+id/menu"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="Play another game"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/playAgain"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintVertical_bias="0.0" />
     <Button
         android:id="@+id/playAgain"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="Play again"
+        android:layout_marginTop="105dp"
+        app:layout_constraintTop_toBottomOf="@+id/bhighscore"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="0.985" />
+        app:layout_constraintHorizontal_bias="0.494" />
 
     <Button
         android:id="@+id/bhighscore"
